Fixed datatable spacing

--- a/Resources/Private/Scss/style.scss
+++ b/Resources/Private/Scss/style.scss
@@ -1,22 +1,6 @@
-/* VARS */
+@import 'Settings';
 
-$font-default: 'Droid Sans', sans-serif;
-$font-extra: 'Droid Serif', serif;
-$font-size: 12pt;
-$width-content: 1000px;
-$color-content-bg: rgb(238, 238, 238);
-$color-content-font: rgb(102, 102, 102);
-$color-content-img-frame-style1: $color-content-font;
-$color-content-img-frame-style2: rgb(230, 224, 209);
-$color-content-img-frame-style3: rgb(204, 204, 204);
-$borderradius-footer: 8px;
-$path-img: '../Images/';
-$header-height: 206px;
-
-
-/* VARS (End) */
-
-
+@import '_Sections/Indices';
 /* ALL */
 
 body {
@@ -307,7 +291,7 @@ footer {
 		width: 670px;
 		float: left;
 	}
-	.tableIncices_filter {
+	.tableIndices_filter {
 		width: 300px;
 		float: right;
 	}
